feat: expose workflow template api
